// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="kol-nav__entry">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="kol-nav__entry">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="kol-nav__entry">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="kol-nav__entry">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
      <div class="kol-nav__compact">
        <kol-button _ariacontrols="nav" _ariaexpanded="" _hidelabel="" _icons="codicon codicon-chevron-left" _label="kol-nav-minimize" _tooltipalign="right" _variant="ghost"></kol-button>
      </div>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="kol-nav__entry">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="kol-nav__entry">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="kol-nav__entry">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _icons="codicon codicon-home" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="kol-nav__entry">
              <kol-button-wc _icons="codicon codicon-squirrel" _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="kol-nav__entry">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="kol-nav__entry">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--compact kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="hide-label kol-nav__entry">
              <kol-link-wc _hidelabel="" _href="#" _icons="codicon codicon-symbol-method" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="hide-label kol-nav__entry">
              <kol-link-wc _active="" _hidelabel="" _href="#" _icons="codicon codicon-symbol-method" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="hide-label kol-nav__entry">
              <kol-link-wc _hidelabel="" _href="#" _icons="codicon codicon-home" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="hide-label kol-nav__entry">
              <kol-button-wc _hidelabel="" _icons="codicon codicon-squirrel" _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li>
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--active">
            <div class="kol-nav__entry">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry--item"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list--has-children">
            <div class="kol-nav__entry">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry--item"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__entry--expand-button"></kol-button-wc>
            </div>
          </li>
          <li>
            <div class="kol-nav__entry">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry--item"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;
